[package]
edition = "2018"
name = "stm32f1"
version = "0.7.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Device support crates for STM32F1 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = "0.2.4"
vcell = "0.1.0"
cortex-m = ">=0.5.8,<0.7"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.8"

[package.metadata.docs.rs]
features = ['rt', 'stm32f100', 'stm32f101', 'stm32f102', 'stm32f103', 'stm32f107']

[features]
default = []
rt = ["cortex-m-rt/device"]
stm32f100 = ['core']
stm32f101 = ['core']
stm32f102 = ['core']
stm32f103 = ['core']
stm32f107 = ['core']
core = ['scb_actrl', 'nvic_stir', 'stk', 'dbg', 'pwr', 'flash', 'rcc']
adc1 = []
adc2 = []
adc3 = []
afio = []
bkp = []
can1 = []
can2 = []
cec = []
crc = []
dac = []
dbg = []
dma1 = []
dma2 = []
ethernet_dma = []
ethernet_mac = []
ethernet_mmc = []
ethernet_ptp = []
exti = []
flash = []
fsmc = []
gpioa = []
gpiob = []
gpioc = []
gpiod = []
gpioe = []
gpiof = []
gpiog = []
i2c1 = []
i2c2 = []
iwdg = []
nvic_stir = []
otg_fs_device = []
otg_fs_global = []
otg_fs_host = []
otg_fs_pwrclk = []
pwr = []
rcc = []
rtc = []
scb_actrl = []
sdio = []
spi1 = []
spi2 = []
spi3 = []
stk = []
tim1 = []
tim10 = []
tim11 = []
tim12 = []
tim13 = []
tim14 = []
tim15 = []
tim16 = []
tim17 = []
tim2 = []
tim3 = []
tim4 = []
tim5 = []
tim6 = []
tim7 = []
tim8 = []
tim9 = []
uart4 = []
uart5 = []
usart1 = []
usart2 = []
usart3 = []
usb = []
usb_otg_device = []
usb_otg_global = []
usb_otg_host = []
usb_otg_pwrclk = []
wwdg = []
stm32f103c8 = ['stm32f103', 'gpioa', 'gpiob', 'gpioc', 'gpiod', 'gpioe', 'afio', 'exti', 'dma1', 'rtc', 'bkp', 'iwdg', 'wwdg', 'adc1', 'adc2', 'i2c1', 'i2c2', 'spi1', 'spi2', 'tim1', 'tim2', 'tim3', 'tim4', 'usart1', 'usart2', 'usart3', 'usb', 'can1']
